--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-idex.html
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <div class="">
+      M
+    </div>
+  </body>
+</html>
